--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
     "uuid": "^10.0.0"
+    "dotenv": "^16.3.1",
+    "qrcode": "^1.5.1",
+    "qrcode-terminal": "^0.12.0",
+    "wwebjs-mongo": "^1.1.0",
+    "socket.io": "^4.7.2",
+    "whatsapp-web.js": "^1.23.0"
+
+
+    
   }
 }
