--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
     "dotenv": "^16.3.1",
     "qrcode": "^1.5.1",
     "qrcode-terminal": "^0.12.0",
