--- a/package.json
+++ b/package.json
@@ -11,18 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
-    "uuid": "^10.0.0",
-    "dotenv": "^16.3.1",
+    "multer": "^2.0.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "qrcode": "^1.5.1",
     "qrcode-terminal": "^0.12.0",
-    "wwebjs-mongo": "^1.1.0",
     "socket.io": "^4.7.2",
-    "whatsapp-web.js": "^1.23.0"
-
-
-    
+    "uuid": "^10.0.0",
+    "whatsapp-web.js": "^1.23.0",
+    "wwebjs-mongo": "^1.1.0"
   }
 }
