--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.5.3",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "puppeteer": "^24.15.0",
     "qrcode": "^1.5.1",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.8.1",
