--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-DATABASE = mongodb+srv://sanjuahuja:cY7NtMKm8M10MbUs@cluster0.wdfsd.mongodb.net/MISSK
+MONGO_URI=mongodb+srv://sanjuahuja:cY7NtMKm8M10MbUs@cluster0.wdfsd.mongodb.net/MISSK
 CLOUDINARY_CLOUD_NAME=dadcprflr
 CLOUDINARY_API_KEY=529124986914967
 CLOUDINARY_API_SECRET=dSn_GGvvSysN0nrPPdx4KmE9XoE
+NODE_ENV=development
+PORT=10000
