Harden WhatsApp Cloud integration for security and Meta compatibility

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ META_APP_ID=your_meta_app_id
 META_APP_SECRET=your_meta_app_secret
 META_API_VERSION=v18.0
 WHATSAPP_WEBHOOK_VERIFY_TOKEN=your_random_webhook_verify_token
+WHATSAPP_ENFORCE_WEBHOOK_SIGNATURE=true
 WHATSAPP_TOKEN_ENCRYPTION_KEY=base64_encoded_32_byte_key
 
 # Example: openssl rand -base64 32
