Add Meta config endpoint and Vite app id fallback

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ ACCESS_TOKEN_SECRET=replace_with_jwt_secret
 
 # Meta / WhatsApp Cloud
 META_APP_ID=your_meta_app_id
+# Optional frontend-exposed id for Vite apps
+VITE_META_APP_ID=your_meta_app_id
 META_APP_SECRET=your_meta_app_secret
 META_API_VERSION=v18.0
 WHATSAPP_WEBHOOK_VERIFY_TOKEN=your_random_webhook_verify_token
