Add Meta and WhatsApp configuration to .env

--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ CLOUDINARY_API_KEY=529124986914967
 CLOUDINARY_API_SECRET=dSn_GGvvSysN0nrPPdx4KmE9XoE
 NODE_ENV=development
 PORT=10000
+META_APP_ID=1717826239505344
+META_APP_SECRET=43269cdf6d5f33499ad01ee14fa04dc1
+META_API_VERSION=v18.0
+WHATSAPP_WEBHOOK_VERIFY_TOKEN=your_random_webhook_verify_token
+WHATSAPP_TOKEN_ENCRYPTION_KEY=base64_encoded_32_byte_key
