--- a/.env
+++ b/.env
@@ -3,10 +3,12 @@ CLOUDINARY_CLOUD_NAME=dadcprflr
 CLOUDINARY_API_KEY=529124986914967
 CLOUDINARY_API_SECRET=dSn_GGvvSysN0nrPPdx4KmE9XoE
 NODE_ENV=development
+ACCESS_TOKEN_SECRET=mis_project_secret_2026
 PORT=10000
 META_APP_ID=1717826239505344
 META_APP_SECRET=43269cdf6d5f33499ad01ee14fa04dc1
 META_API_VERSION=v18.0
 WHATSAPP_WEBHOOK_VERIFY_TOKEN=WHATSAPP_WEBHOOK_VERIFY_TOKEN
+WHATSAPP_ENFORCE_WEBHOOK_SIGNATURE=true
 WHATSAPP_TOKEN_ENCRYPTION_KEY=pK8Yv1wFz3cTn6mQeJ9rL2sUx4BdGh7Nq0VtIyRaZkE=
 
